--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="./js/main.js"></script>
 </head>
 <body>
-    <h2>CALCULADORA IMC</h2>
+    <h2>GRACIAS, VUELVA PRONTO</h2>
+    <img src="./assets/images/minisupers.jpeg" alt="minisupersking">
 </body>
 </html>
