--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Calculadora IMC</title>
+    <title>PREENTREGA 2</title>
     <script src="./js/main.js"></script>
 </head>
 <body>
